--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <hr width =500px>
 <a href="http://origami.me/pigeon/">
-<img src="chameleon.png" width="200px" height="200px"></a>
+<img src="images/chameleon.png" width="200px" height="200px"></a>
 <p><i>Interesting Facts about Chameleon</i></p>
 <ul>
     <li>Chameleons are reptiles that are part of the iguana suborder</li>
@@ -15,7 +15,7 @@
 </ul>
 <hr width= 500px>
 <a href="http://original.me/pigeon/">
-<img src="pigeon.png" width="200px" height="200px"></a>
+<img src="images/pigeon.png" width="200px" height="200px"></a>
 <p><i>Interesting Facts about Pigeon</i></p>
 <ol>
     <li>Pigeons are incredibly complex and intelligent animals</li>
